# open-earth-benchmarks

./: .gitignore  CMakeLists.txt
include/: papi_inst.h  util.h
src/: fastwavesuv.cpp  fvtp2d.cpp  hadvuv.cpp  hadvuv5th.cpp  hdiffsa.cpp  hdiffsmag.cpp  laplace.cpp  nh_p_grad.cpp  p_grad_c.cpp  uvbke.cpp
